--- a/app/src/main/res/layout/add_student.xml
+++ b/app/src/main/res/layout/add_student.xml
@@ -36,6 +36,7 @@
             android:inputType="number" />
 
         <RadioGroup
+            android:id="@+id/rgGender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
@@ -77,7 +78,7 @@
             android:layout_marginTop="10dp" />
 
         <Button
-            android:id="@+id/btnSave"
+            android:id="@+id/btnRegister"
             android:layout_width="383dp"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_rounded_corners"
