--- a/app/src/main/res/layout/student_card_view.xml
+++ b/app/src/main/res/layout/student_card_view.xml
@@ -51,6 +51,7 @@
             android:hint="Address"/>
 
         <Button
+            android:id="@+id/btnDelete"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/ic_delete"
