--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:textColor="#1d65ff"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="50dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="22dp"
+        android:layout_marginTop="20dp"
         android:hint="Username"/>
 
     <EditText
